--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img class="cloud-image2" src="clouds.png" alt="cluod-image" />
         <h1>I'm Aniket</h1>
         <h2>a programmer</h2>
-        <img src="hill.png" alt="" class="mountain-image" />
+        <img src="hill.png" alt="mountain-image" class="mountain-image" />
       </div>
     </div>
 
