--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aniket's Website</title>
     <link
       rel="shortcut icon"
-      href="images/favikon.png"
+      href="favikon.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
